# packages/zod/schemas/member.schema.ts
@@ -40,7 +40,6 @@ export const MemberSchema = z.object({
   workspace_id: z.string().cuid(),
   first_activity: z.coerce.date().nullable(),
   last_activity: z.coerce.date().nullable(),
-  joined_at: z.coerce.date().nullable(),
   deleted_at: z.coerce.date().nullable(),
   created_at: z.coerce.date(),
   updated_at: z.coerce.date(),
